# sample-multimodal-training-assistant

./: .gitignore  NOTICE  README.md  THIRD-PARTY-LICENSES  deploy.sh
agent/: .env.example  main.py  pyproject.toml  requirements.txt
agent/agents/: orchestrator.py  voice_agent.py
agent/lib/: dynamo_client.py  kb_client.py  user_context.py
agent/lib/ag_ui_strands_patched/: __init__.py  agent.py  config.py  endpoint.py  utils.py
agent/tools/: course_management.py  lesson_delivery.py  user_progress.py  web_research.py
cdk/: package-lock.json  package.json
cdk/lambda/bda-processing/: index.py
cdk/lib/: agentcore-stack.ts  auth-stack.ts  constants.ts  multimedia-rag-stack.ts  opensearch-stack.ts  processing-stack.ts  storage-dist-stack.ts
frontend/: .env.example  .gitignore  README.md  next.config.ts  package.json  playwright.config.ts
frontend/e2e/: auth.setup.ts  chat.spec.ts
frontend/public/: audio-player-processor.js
frontend/scripts/: fetch-config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/agent-proxy/: route.ts
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/api/sync-kb/: route.ts
frontend/src/components/: AuthProvider.tsx  VoiceChat.tsx  flashcard-deck.tsx  kb-search-results.tsx  media-viewer.tsx  quiz-card.tsx  thinking-indicator.tsx
frontend/src/components/DataPanel/: DataPanel.tsx  DropOverlay.tsx  FileStatusCard.tsx  SyncButton.tsx  UploadZone.tsx  index.ts  types.ts  useProcessingStatus.ts  useUploadManager.ts
frontend/src/lib/: signWebSocketUrl.ts
(+2 files in other folders)
